syntax = "proto3";

option go_package = "github.com/darma2/server/proto/greeter;greeter";

package greeter;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloResponse);
  rpc SayHeader(HeaderRequest) returns (HeaderResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message HeaderRequest {}

message HeaderResponse {
  map<string, string> header = 1;
}
